# python

./: .gitignore  .pre-commit-config.yaml  LICENSE.txt  README.md  pyproject.toml  setup.py
.github/: dependabot.yaml
.github/workflows/: build.yaml  ci.yaml  lint.yaml  release.yaml  test.yaml
contiguity/: __init__.py  main.py
examples/base/: basic_usage.py  msgspec_usage.py  pydantic_usage.py
examples/collections/: basic_usage.py  pydantic_usage.py
src/contiguity/: __init__.py  _auth.py  _client.py  _common.py  _instant_messaging.py  _product.py  _response.py  analytics.py  domains.py  email.py  imessage.py  lease.py  leases.py  otp.py  quota.py  send.py  template.py  text.py  verify.py  whatsapp.py
src/contiguity/base/: __init__.py  async_base.py  base.py  common.py  exceptions.py
src/contiguity/collections/: __init__.py  async_collection.py  collection.py  compatibility.py  exceptions.py
tests/: __init__.py  test_base_dict_typed.py  test_base_dict_untyped.py  test_base_model.py  test_base_typeddict.py  test_domains.py  test_email.py  test_imessage.py  test_leases.py  test_otp.py  test_text.py  test_verify.py  test_whatsapp.py
tests/base/: __init__.py  test_async_base_dict_typed.py  test_async_base_dict_untyped.py  test_async_base_model.py  test_async_base_struct.py  test_async_base_typeddict.py  test_base_dict_typed.py  test_base_dict_untyped.py  test_base_model.py  test_base_struct.py  test_base_typeddict.py
tests/collections/: test_async_collection_dict_typed.py  test_async_collection_dict_untyped.py  test_async_collection_model.py  test_async_collection_typeddict.py  test_collection_dict_typed.py  test_collection_dict_untyped.py  test_collection_model.py  test_collection_typeddict.py
