[build-system]
requires = [
    "setuptools>=61",
]
build-backend = "setuptools.build_meta"

[project]
name = "contiguity"
dynamic = ["version"]
description = "Contiguity's official Python SDK"
readme = "README.md"
license = {file = "LICENSE.txt"}
requires-python = ">=3.9"
authors = [
    {name = "Contiguity", email = "help@contiguity.support"},
]
keywords = [
    "python",
    "contiguity",
    "sms",
    "email",
    "otp",
    "deta",
    "base",
    "database",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27.2",
    "msgspec>=0.19.0",
    "phonenumbers>=8.13.47,<9.0.0",
    "typing-extensions>=4.12.2,<5.0.0",
]

[dependency-groups]
dev = [
    "pre-commit~=3.8.0",
    "pytest~=8.3.3",
    "pytest-cov~=5.0.0",
    "python-dotenv~=1.0.1",
    "pytest-asyncio~=0.24.0",
]

[project.urls]
Repository = "https://github.com/contiguity/python"

[tool.setuptools]
package-data = {contiguity = ["py.typed"]}

[tool.setuptools.dynamic]
version = {attr = "contiguity.__version__"}

[tool.ruff]
src = ["src"]
line-length = 119
target-version = "py39"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["A", "D", "T201"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

[tool.pyright]
venvPath = "."
venv = ".venv"
reportUnnecessaryTypeIgnoreComment = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
